# readii_2_roqc

./: .bhklab-template-builder-answers.yml  .gitignore  404.html  CHANGELOG.md  Dockerfile  README.md  extract_radcure_oral_cavity_features.py  index.html  mkdocs.yaml  pixi.toml  pyproject.toml  ruff.toml  search.html
config/: pyradiomics_original_all_features.yaml
config/datasets/: .gitignore  CC-Radiomics-Phantom.yaml  CPTAC-CCRCC.yaml  CPTAC-HNSCC.yaml  CPTAC-PDA.yaml  CPTAC-UCEC.yaml  HEAD-NECK-RADIOMICS-HN1.yaml  HEAD-NECK-RADIOMICS-HN1_windowed.yaml  HNSCC.yaml  NSCLC-Radiogenomics.yaml  NSCLC-Radiomics.yaml  NSCLC-Radiomics_test.yaml  NSCLC-Radiomics_windowed.yaml  RADCURE.yaml  RADCURE_GTVp.yaml  RADCURE_windowed.yaml  TCGA-KIRC.yaml  dataset_config_template.yaml
config/pyradiomics/: aerts_original_wavelet.yaml  bernatowicz_features.yaml  linear_all_images_features.yaml  original_feats_linear_interpolation.yaml  pyradiomics_h4h_all_images_features.yaml  pyradiomics_original_all_features.yaml  pyradiomics_original_single_feature.yaml  pyradiomics_wavelet_shape_gldm_only.yaml  pyradiomics_wavelet_shape_glrlm_only.yaml
config/signatures/: HEAD-NECK-RADIOMICS-HN1_windowed_opc_volume_only.yaml  HEAD-NECK-RADIOMICS-HN1_windowed_volume_only.yaml  volume_only.yaml  (+6 more)
data/: .gitignore
data_sources/: index.html
devnotes/: index.html
docs/: data_sources.md  devnotes.md  usage.md
sandbox/: 0n-feature-selection.ipynb  combine_feature_sets.ipynb  copy_rtstructs.py  dataset_loader.py  debug_make_negative_controls.ipynb  demographic_summary.ipynb  dev_binary_prediction.ipynb  dev_correlate.ipynb  dev_feature_extraction.ipynb  extract_radcure_oral_cavity_features.py  get_seg_file_metadata.ipynb  image_type_indexing.ipynb  label_data_for_prediction.ipynb  make_cropped_image_mask_figures.ipynb  merge_TCGA-KIRC_data.ipynb  nifti_process_mit.py  parallel_neg_control.ipynb  parallel_neg_controls.py  rename_files.py  rename_id_column.ipynb  restructure_make_negative_controls.ipynb  run_analysis.ipynb  subset_clinical.ipynb
search/: search_index.json
usage/: index.html
workflow/: Snakefile  with_settings.smk
(+63 files in other folders)
