[project]
authors = [{ name = "Katy", email = "bhklab.katyscott@gmail.com" }]
name = "readii_2_roqc"
requires-python = "<3.12"
version = "0.1.0"
dependencies = [
    "pydantic-settings>=2.9.1,<3", 
    "med-imagetools>=2.12.0,<3", 
    "readii>=1.36.2,<2",
    "numpy>=2.2.5,<3",
    "scikit-learn>=1.6.1,<2",
    "scikit-survival>=0.24.1,<0.25",
    "openpyxl>=3.1.5,<4",
    "click>=8.2.1,<9",
    "damply>=0.10.0, <0.11"
]

[project.scripts]
make_negative_controls = "readii_2_roqc.readii.make_negative_controls:main"
index = "readii_2_roqc.feature_extraction.index:main"
feature_extraction = "readii_2_roqc.feature_extraction.extract:main"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64", "osx-64"]

[tool.pixi.pypi-dependencies]
readii_2_roqc = { path = ".", editable = true }

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/readii_2_roqc"]
include = ["pyproject.toml", "README.md", "src/**"]